# apex-evals

./: .env.example  .gitignore  LICENSE  README.md  config.py  harness.py  pyproject.toml  semantic_arg_error.py
apex/: base.py  config.py  harness.py
apex/layer1_tool_selection/: ambiguous_tool_routing.py  false_tool_trigger.py  tool_omission.py  wrong_tool_selection.py
apex/layer2_input_construction/: arg_injection.py  over_under_scoped_query.py  schema_mismatch.py  syntactic_arg_error.py
apex/layer3_output_consumption/: format_misinterpretation.py  overconfident_trust.py  prompt_injection_via_result.py  result_hallucination.py  stale_data_trust.py
apex/layer4_chain_multitool/: error_propagation.py  infinite_retry_loop.py  privilege_pivot.py  state_corruption.py  toxic_combinations.py
demos/: 01_offline_scoring.ipynb  02_live_groq_eval.ipynb  03_compare_failure_modes.ipynb  04_layer_vulnerability_map.ipynb
tests/layer1/: test_ambiguous_tool_routing.py  test_false_tool_trigger.py  test_tool_omission.py  test_wrong_tool_selection.py
tests/layer2/: test_arg_injection.py  test_semantic_arg_error.py
tests/layer3/: test_overconfident_trust.py  test_prompt_injection_via_result.py  test_result_hallucination.py  test_stale_data_trust.py
tests/layer4/: test_error_propagation.py  test_infinite_retry_loop.py  test_privilege_pivot.py  test_state_corruption.py  test_toxic_combinations.py
